Fix 5.7 default front covers to match 5.6 better (BL-13264)
Also adjust the margin settings in appearance-theme-default.css to match
the Default Margins table in docs.bloomlibrary.org better.

--- a/src/content/templates/xMatter/bloom-xmatter-common.less
+++ b/src/content/templates/xMatter/bloom-xmatter-common.less
@@ -48,6 +48,7 @@
         //independently of their appearance order in the html
         display: flex;
         flex-direction: column;
+        row-gap: 10px;   // extra space between title items (less than default --page-gutter value which would otherwise apply)
 
         .bloom-editable {
             order: 0;
